--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "next": "15.5.4",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
